--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,11 @@ Login
 <div class="container">
     <h1 class="display-1 text-center">Login</h1>
     <div class="mx-auto w-50">
+
+        {% for msg in get_flashed_messages() %}
+        <small class="text-info">{{msg}}</small>
+        {% endfor %}
+        
         <form method="POST">
             {{ form.hidden_tag() }}
 
