--- a/templates/secret.html
+++ b/templates/secret.html
@@ -3,10 +3,49 @@
 Secret
 {% endblock %}
 {% block content %}
-<h1 class="display-1 text-center">Shhhhhh!</h1>
+<h1 class="display-1 text-center">{{user.username}}</h1>
 <div class="container">
+    <div class="mx-auto w-50 text-center">
+        {% for msg in get_flashed_messages() %}
+        <small class="text-info">{{msg}}</small>
+        {% endfor %}
+    </div>
     <div class="d-flex justify-content-center mt-4">
-        <img src="https://media.tenor.com/BxBXA_6u-PQAAAAe/lotr-keep-it-safe.png" alt="Gandalf">
+        <div>
+            <p><b>Name:</b> {{user.first_name}} {{user.last_name}}</p>
+            <p><b>Email:</b> {{user.email}}</p>
+        </div>
+    </div>
+    <div class="mx-auto w-50 my-4">
+        <h2 class="display-6">Feedback Submissions:</h2>
+        <ul class="bg-info bg-opacity-10 border border-info rounded">
+            {% for feedback in feedback %}
+            <li>
+                <div>
+                    <b>Title:</b> {{feedback.title}}
+                </div>
+                <div class="py-2">
+                    <b>Content:</b> {{feedback.content}}
+                </div>
+                <div class="row row-cols-lg-auto"> 
+                    <form class="" action="/feedback/{{feedback.id}}/delete" method="POST">
+                        <button class="btn btn-danger"><i class="fas fa-trash"></i></button>
+                    </form>
+                    <a class="btn btn-info" href="/feedback/{{feedback.id}}/update">Update</a>
+                </div>
+            </li>
+
+            {% endfor %}
+        </ul>
+        
+        <div class="row row-cols-lg-auto">
+            <form action="/users/{{user.username}}/delete" method="POST">
+                <a class="btn btn-primary" href="/users/{{user.username}}/feedback/add">Add Feedback</a>
+                <button class="btn btn-danger">
+                    Delete Accout
+                </button>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
