--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css">
     <title>{% block title %}{%endblock%}</title>
 </head>
 <body>
@@ -14,7 +15,11 @@
             <ul class="nav">
               {% if session['username'] %}
               <li class="nav-item">
-                <a class="nav-link pr-3 text-light" href="/logout">Logout</a>
+                <form action="/logout" method="POST">
+                  <button class="nav-link pr-3 text-light">
+                    Logout
+                  </button>
+                </form>
               </li>
               {% else %}
               <li class="nav-item">
